# Huffman-coding-cpp

./: .gitignore  BitStream.h  HuffmanCoding.h  README.md  main.cpp
HuffmanCoding/: CMakeLists.txt
HuffmanCoding/includes/: BitStream.h  HuffmanCoding.h  config.h  config.h.in
HuffmanCoding/input/: test_large.txt
HuffmanCoding/src/: main.cpp
